--- a/webClient/index.html
+++ b/webClient/index.html
@@ -48,8 +48,10 @@
         </div>
         
         <div id="preview">
-            <!--div id="treeLocation"></div-->
-            <button id="it" onclick="clickedIt()">It</button>
+            <!--div id="treeLocation"></div>
+            <input id="from" placeholder="from"></input>
+            <input id="to" placeholder="to"></input>
+            <button id="it" onclick="clickedIt()">It</button-->
             <iframe src="" id="previewImage"></iframe>
         </div>
         
