Many asthetic changes are a-go-go
re-order totally works.
There is a glow effect for elements.
Style is [better?].

Still have to:
-Make list items look better.
-Remove unused buttons.

--- a/webClient/index.html
+++ b/webClient/index.html
@@ -51,7 +51,7 @@
             <!--div id="treeLocation"></div>
             <input id="from" placeholder="from"></input>
             <input id="to" placeholder="to"></input>
-            <button id="it" onclick="clickedIt()">It</button-->
+            <button id="it" onclick="clickedIt()">Move It!</button-->
             <iframe src="" id="previewImage"></iframe>
         </div>
         
