you can now specify a port via CODE!

--- a/webClient/index.html
+++ b/webClient/index.html
@@ -21,7 +21,7 @@
             <div id="postLink">
                 <input readonly="readonly" id="pageName"></input>
                 
-                <textarea id="postBox" placeholder="Drop files here" onkeydown="Javascript: if (event.keyCode==13) sw.post.send()" ondrop="Javascript: sw.post.send();"></textarea>
+                <textarea id="postBox" placeholder="Drop files here"></textarea>
             </div>
             
             <div id="page"></div>
