Fixed sequencing of tasks on server
stopped (but didn't economize) screen flicked when someone else loads
the page.

--- a/webClient/placeholder.html
+++ b/webClient/placeholder.html
@@ -2,12 +2,20 @@
 
 <html>
 	<head>
+		<style>
+			img{
+				width:40px;
+				height:40px;
+			}
+		</style>
 	</head>
 
 	<body>
 		<h1>Now loading your page!</h1>
 		<h3>Caution: your page may never load!</h3>
 		We're working hard to provide previews of more and more websites. Bear with us!
+
+		<h2>Feel free to use the <img src="css/images/popOut.png"></img> button for now.</h2>
 	</body>
 
 </html>
