--- a/webClient/index.html
+++ b/webClient/index.html
@@ -43,6 +43,7 @@
                     </br></br>
                     <input type="checkbox" id="followTheLeader" value="Follow the leader?" checked>Follow the leader?</input> </br>
                     <input type="checkbox" id="jumpToCurrent" value="Always load most recent?" checked>Always load most recent?</input> </br>
+                    <input type="checkbox" id="postToChildren" value="Post to childen instead?">Post to childen instead?</input> </br>
                     <a href="/lists/recent">>>>Recent Lists</a>
 
                 </div>
