trying to unbreak iphone/pad support. not working

--- a/webClient/index.html
+++ b/webClient/index.html
@@ -21,6 +21,8 @@
 
         
         <div id="controlPanel">
+
+            <!--script src="https://sharedwindows.hackpad.com/temp.js"></script><noscript><div>View <a href="https://sharedwindows.hackpad.com/temp">temp</a> on Hackpad.</div></noscript-->
             
             <div id="pageNameBox">
                 <input id="postBox" onclick="Javascript: this.focus(); this.select();" placeholder="http://your_URL_here or drop files below"></input>
