--- a/webClient/index.html
+++ b/webClient/index.html
@@ -22,6 +22,8 @@
         
         <div id="controlPanel">
 
+            <!--div id="uploading" style="position:absolute; top:50px;left:50px; width:50px; height:50px; background-color:red; display:none;">.</div-->
+
             <!--script src="https://sharedwindows.hackpad.com/temp.js"></script><noscript><div>View <a href="https://sharedwindows.hackpad.com/temp">temp</a> on Hackpad.</div></noscript-->
             
             <div id="pageNameBox">
