--- a/webClient/index.html
+++ b/webClient/index.html
@@ -28,6 +28,10 @@
             
             <div id="pageNameBox">
                 <input id="postBox" onclick="Javascript: this.focus(); this.select();" placeholder="http://your_URL_here or drop files below"></input>
+
+                <!--input id="uploadFile" type="file"></input-->
+
+                <form id="my-awesome-dropzone" action="/upload" class="dropzone"></form>
             </div>
             
             <div id="page"></div>
