Now hosting files. Preview for files
. Autodisplay qr and about when a list is created.

--- a/webClient/index.html
+++ b/webClient/index.html
@@ -28,10 +28,9 @@
             
             <div id="pageNameBox">
                 <input id="postBox" onclick="Javascript: this.focus(); this.select();" placeholder="http://your_URL_here or drop files below"></input>
-
-                <!--input id="uploadFile" type="file"></input-->
-
-                <form id="my-awesome-dropzone" action="/upload" class="dropzone"></form>
+                <label class="cabinet">
+                    <input id="uploadFile" type="file"></input>
+                </label>
             </div>
             
             <div id="page"></div>
