--- a/webClient/imageWrapper.html
+++ b/webClient/imageWrapper.html
@@ -15,6 +15,8 @@
 				border-radius: 30px;
 				margin:10px;
 
+				margin-top:17px;
+
 				/*box-shadow: 0px 0px 5px 2px #888888;*/
 
 			}
@@ -25,7 +27,10 @@
 				border:3px dotted grey;
 				background-color: lightgrey;
 				margin:10px;
-				border-radius: 10px;
+				border-radius: 10px;.
+
+				
+				margin-top:17px;
 			}
 
 			html, body{
